test-suite/tests/roundtrip/invalid/semantic/undeclared_idenfitier/01/via-conjure.generated-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/semantic/undeclared_idenfitier/01/undeclared_identifier.essence:1:17:
  |
1 | find x : int(1..n)
  |                 ^
Error: Symbol not found "n"

